Add remaining OWASP API coverage
